--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@tippyjs/react": "^4.2.6",
     "esbuild": "^0.17.12",
     "gsap": "^3.11.5",
+    "lottie-react": "^2.4.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scroll-to-top": "^3.0.0",
+    "react-toastify": "^9.1.2",
     "typed.js": "^2.0.12",
     "typewriter-effect": "^2.19.0"
   },
