--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-scroll": "^1.8.9",
     "react-scroll-to-top": "^3.0.0",
     "react-toastify": "^9.1.2",
     "typed.js": "^2.0.12",
