Add libs react-router and framer-motion ⚙️

--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tippyjs/react": "^4.2.6",
     "esbuild": "^0.17.12",
-    "gsap": "^3.11.5",
+    "framer-motion": "^10.12.12",
     "lottie-react": "^2.4.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scroll": "^1.8.9",
+    "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.2",
     "typewriter-effect": "^2.19.0"
   },
