--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
         "react-toastify": "^9.1.2"
     },
     "devDependencies": {
+        "@types/node": "^20.4.5",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
+        "@typescript-eslint/eslint-plugin": "^6.2.0",
+        "@typescript-eslint/parser": "^6.2.0",
         "@vitejs/plugin-react": "^3.0.0",
         "autoprefixer": "^10.4.13",
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.4",
+        "typescript": "^5.1.6",
         "vite": "^4.0.0"
     }
 }
