--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.11.2",
-        "react-toastify": "^9.1.2"
+        "react-toastify": "^9.1.2",
+        "tailwind-merge": "^1.14.0"
     },
     "devDependencies": {
         "@types/node": "^20.4.5",
