--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@emailjs/browser": "^3.11.0",
         "@radix-ui/react-form": "^0.0.3",
         "esbuild": "^0.17.12",
+        "framer-motion": "^10.16.0",
         "lottie-react": "^2.4.0",
         "lucide-react": "^0.261.0",
         "react": "^18.2.0",
