--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@typescript-eslint/parser": "^6.2.0",
         "@vitejs/plugin-react": "^3.0.0",
         "autoprefixer": "^10.4.14",
+        "eslint": "^8.48.0",
         "postcss": "^8.4.27",
         "tailwindcss": "^3.3.3",
         "typescript": "^5.1.6",
