--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-    "name": "portfolio",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "@emailjs/browser": "^3.11.0",
-        "@radix-ui/react-form": "^0.0.3",
-        "esbuild": "^0.17.12",
-        "framer-motion": "^10.16.0",
-        "lottie-react": "^2.4.0",
-        "lucide-react": "^0.261.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.11.2",
-        "react-toastify": "^9.1.2",
-        "tailwind-merge": "^1.14.0"
-    },
-    "devDependencies": {
-        "@types/node": "^20.4.5",
-        "@types/react": "^18.0.26",
-        "@types/react-dom": "^18.0.9",
-        "@typescript-eslint/eslint-plugin": "^6.2.0",
-        "@typescript-eslint/parser": "^6.2.0",
-        "@vitejs/plugin-react": "^3.0.0",
-        "autoprefixer": "^10.4.14",
-        "eslint": "^8.48.0",
-        "postcss": "^8.4.27",
-        "tailwindcss": "^3.3.3",
-        "typescript": "^5.1.6",
-        "vite": "^4.0.0"
-    }
+  "name": "portfolio",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@radix-ui/react-form": "^0.0.3",
+    "esbuild": "^0.17.12",
+    "framer-motion": "^10.16.0",
+    "lottie-react": "^2.4.0",
+    "lucide-react": "^0.261.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.2",
+    "tailwind-variants": "^0.1.14"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.48.0",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
+    "vite": "^4.0.0"
+  }
 }
