--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "resend": "^1.1.0",
+    "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.14",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
