--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^2.1.0"
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6"
   }
 }
