--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-toastify": "^9.1.3",
+    "react-hot-toast": "^2.4.1",
     "resend": "^1.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.14",
