--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "tailwind-variants": "^0.1.14",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
